--- a/ansiible-docker-install.yml
+++ b/ansiible-docker-install.yml
@@ -21,7 +21,7 @@
     - name: Add Docker repo
       get_url:
         url: https://download.docker.com/linux/centos/docker-ce.repo
-        dest: /etc/yum.repos.d/docer-ce.repo
+        dest: /etc/yum.repos.d/docker-ce.repo
 
     - name: Install Docker
       package:
